MDEV-12617 CASE and CASE-alike hybrid functions do not preserve exact data types